# javrate-downloader

./: .gitignore  .spectra.yaml  README.md  index.html  m3u8_download_app_spec.md  package-lock.json  package.json  vite.config.ts
docs/: integration-verification.md
openspec/changes/archive/2026-05-09-m3u8-relay-downloader/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-m3u8-relay-downloader/specs/auto-relay/: spec.md
openspec/changes/archive/2026-05-09-m3u8-relay-downloader/specs/download-engine/: spec.md
openspec/changes/archive/2026-05-16-add-avjoy-support/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/archive/2026-05-16-motv-cdn-support/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/m3u8-relay-downloader/: .openspec.yaml
openspec/changes/m3u8-relay-downloader/specs/task-management/: spec.md
openspec/specs/auto-relay/: spec.md
openspec/specs/download-engine/: spec.md
openspec/specs/downloader-ui/: spec.md
openspec/specs/m3u8-extraction/: spec.md
openspec/specs/task-management/: spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_relay.rs  cdn_adapter.rs  commands.rs  download_engine.rs  extraction.rs  lib.rs  main.rs  task_management.rs
src/components/: ResolutionDialog.tsx  TaskList.tsx
src/lib/: m3u8.ts  progress.ts  taskState.ts  types.ts
src/styles/: app.css
tests/: m3u8.test.ts  taskState.test.ts
(+5 files in other folders)
