[package]
name = "javrate-downloader"
version = "0.1.0"
description = "macOS m3u8 relay downloader"
authors = ["Javrate Downloader"]
edition = "2021"

[lib]
name = "javrate_downloader"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "5"
nix = { version = "0.29", features = ["signal"] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"

[dev-dependencies]
tempfile = "3"
